fixed alignment of lists and added unit test
The html structure is not perfect yet because the alignment class is
used too often. (TODO)

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -307,6 +307,10 @@ h1, h2, h3, h4 {
     margin-left: 0 !important;
 }
 
+/* a list on its own justifies */
+.list {
+    text-align: justify;
+}
 
 
 
